# fred-utils-pyfco

./: .bumpversion.cfg  .gitignore  .gitlab-ci.yml  .isort.cfg  AUTHORS  CHANGELOG.rst  ChangeLog.md  ChangeLog.rst  MANIFEST.in  Makefile  constraints.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.copr/: Makefile
contrib/fedora/: fred-pyfco.spec
docker/ubuntu:bionic/: Dockerfile
docker/ubuntu:xenial/: Dockerfile
pyfco/: __init__.py  client.py  corba.py  corbarecoder.py  name_service.py  recoder.py  utils.py
pyfco/tests/: __init__.py  test_client.py  test_corba.py  test_corbarecoder.py  test_name_service.py  test_recoder.py  test_utils.py
