[options]
zip_safe = false

[flake8]
max-line-length = 120
max-complexity = 10

[isort]
line_length = 120
multi_line_output = 2
known_first_party = pyfco
default_section = THIRDPARTY
combine_as_imports = true
add_imports = from __future__ import unicode_literals

[pydocstyle]
convention = google
add_select = D204,D400,D401
add_ignore = D1
